==> Awulokune/ESP32_ST7789_Fast/ESP32_ST7789_Fast.cpp <==
#include "ESP32_ST7789_Fast.h"
#include <SPI.h>
#define ST7789_NOP     0x00
#define ST7789_SWRESET 0x01
#define ST7789_SLPIN   0x10  // sleep on
#define ST7789_SLPOUT  0x11  // sleep off
#define ST7789_PTLON   0x12  // partial on
#define ST7789_NORON   0x13  // partial off
#define ST7789_INVOFF  0x20  // invert off
#define ST7789_INVON   0x21  // invert on
#define ST7789_DISPOFF 0x28  // display off
#define ST7789_DISPON  0x29  // display on
#define ST7789_IDMOFF  0x38  // idle off
#define ST7789_IDMON   0x39  // idle on
#define ST7789_CASET   0x2A
#define ST7789_RASET   0x2B
#define ST7789_RAMWR   0x2C
#define ST7789_RAMRD   0x2E
#define ST7789_COLMOD  0x3A
#define ST7789_MADCTL  0x36
#define ST7789_PTLAR    0x30   // partial start/end
#define ST7789_VSCRDEF  0x33   // SETSCROLLAREA
#define ST7789_VSCRSADD 0x37
#define ST7789_WRDISBV  0x51
#define ST7789_WRCTRLD  0x53
#define ST7789_WRCACE   0x55
#define ST7789_WRCABCMB 0x5e
#define ST7789_POWSAVE    0xbc
#define ST7789_DLPOFFSAVE 0xbd
#define ST7789_MADCTL_MY  0x80
#define ST7789_MADCTL_MX  0x40
#define ST7789_MADCTL_MV  0x20
#define ST7789_MADCTL_ML  0x10
#define ST7789_MADCTL_RGB 0x00
#define ST7789_240x240_XSTART 0
#define ST7789_240x240_YSTART 0
#define ST_CMD_DELAY   0x80
#define SPI_START SPI.beginTransaction(spiSettings)
#define SPI_END   SPI.endTransaction()
#define DC_DATA     digitalWrite(dcPin, HIGH)
#define DC_COMMAND  digitalWrite(dcPin, LOW)

inline void ESP32_ST7789_Fast::writeSPI(uint8_t c) { SPI.transfer(c); }

void ESP32_ST7789_Fast::init(uint16_t width, uint16_t height) 
{
  commonST7789Init(NULL);

  if(width==240 && height==240) {
    _colstart = 0;
    _rowstart = 80;
  } else {
    _colstart = 0;
    _rowstart = 0;
  }
  _ystart = _xstart = 0;
  _width  = width;
  _height = height;

  displayInit(init_240x240);
  setRotation(2);
}

void ESP32_ST7789_Fast::commonST7789Init(const uint8_t *cmdList)
{
  pinMode(dcPin, OUTPUT);
#ifndef CS_ALWAYS_LOW
  if (csPin >= 0) {
    pinMode(csPin, OUTPUT);
    digitalWrite(csPin, HIGH);
  }
#endif

  SPI.begin(sclkPin, -1, mosiPin, csPin);

  if (rstPin != -1) {
    pinMode(rstPin, OUTPUT);
    digitalWrite(rstPin, HIGH);
    delay(50);
    digitalWrite(rstPin, LOW);
    delay(50);
    digitalWrite(rstPin, HIGH);
    delay(50);
  }

  if(cmdList) displayInit(cmdList);
}

void ESP32_ST7789_Fast::drawImageF(int16_t x, int16_t y, int16_t w, int16_t h, const uint16_t *img16) 
{
  if(x>=_width || y>=_height || w<=0 || h<=0) return;
  setAddrWindow(x, y, x+w-1, y+h-1);
  uint32_t num = (uint32_t)w * h;
  while (num--) SPI.transfer16(pgm_read_word(img16++));
  CS_IDLE;
  SPI_END;
}
