==> adamgreen/Ferdinand20/external/Arduino_ST7789_Fast/Arduino_ST7789_Fast.cpp <==
#include "Arduino_ST7789_Fast.h"
#include <limits.h>
#include <nrf_gpio.h>
#include <nrf_delay.h>
#include <nrf_drv_spi.h>
#define PROGMEM
#define SPI_START
#define SPI_END
#define DC_DATA     flushSPI(); *portSet = dcMask
#define DC_COMMAND  flushSPI(); *portClear = dcMask
#define CS_IDLE     flushSPI(); *portSet = csMask
#define CS_ACTIVE   flushSPI(); *portClear = csMask
#define SPI_OBJ ((NRF_SPI_Type*)NRF_DRV_SPI_PERIPHERAL(ST7789_SPI_INSTANCE))
#define CS_IDLE
#define CS_ACTIVE

inline void Arduino_ST7789::writeSPI(uint8_t c)
{
    if (bytesInFlight < 2)
    {
        // The SPI peripheral can hold 2 bytes in its queue so fill it up first.
        bytesInFlight++;
        SPI_OBJ->TXD = c;
        return;
    }

    // The transmit queue was full so wait for atleast one of them to complete.
    while (!SPI_OBJ->EVENTS_READY)
    {
        // Wait for SPI peripheral to finish exchanging at least one byte.
    }

    // Read out all of the received bytes that are now available.
    while (SPI_OBJ->EVENTS_READY)
    {
        SPI_OBJ->EVENTS_READY = 0;
        SPI_OBJ->RXD;
        bytesInFlight--;
    }

    // There is now enough room to transmit the current byte.
    bytesInFlight++;
    SPI_OBJ->TXD = c;
}

void Arduino_ST7789::init()
{
  commonST7789Init(NULL);

  displayInit(initST7789);
  setRotation(0);
}

void Arduino_ST7789::commonST7789Init(const uint8_t *cmdList)
{
  _ystart = _xstart = 0;
  _colstart  = _rowstart = 0; // May be overridden in init func

  nrf_gpio_pin_set(dcPin);
  nrf_gpio_cfg_output(dcPin);

#ifndef CS_ALWAYS_LOW
  nrf_gpio_pin_set(csPin);
  nrf_gpio_cfg_output(csPin);
  csMask = 1 << csPin;
#endif

  portSet = &NRF_GPIO->OUTSET;
  portClear = &NRF_GPIO->OUTCLR;
  dcMask = 1 << dcPin;

  nrf_gpio_pin_clear(sckPin);
  nrf_gpio_cfg(sckPin, NRF_GPIO_PIN_DIR_OUTPUT, NRF_GPIO_PIN_INPUT_CONNECT,
               NRF_GPIO_PIN_NOPULL, NRF_GPIO_PIN_S0S1, NRF_GPIO_PIN_NOSENSE);
  nrf_gpio_pin_clear(mosiPin);
  nrf_gpio_cfg_output(mosiPin);

  SPI_OBJ->FREQUENCY = NRF_SPI_FREQ_8M;
  SPI_OBJ->CONFIG = NRF_SPI_MODE_2 << 1;
  SPI_OBJ->PSELSCK = sckPin;
  SPI_OBJ->PSELMOSI = mosiPin;
  SPI_OBJ->ENABLE = 1;

  CS_ACTIVE;
  if(rstPin != NRF_DRV_SPI_PIN_NOT_USED) {
    nrf_gpio_pin_set(rstPin);
    nrf_gpio_cfg_output(rstPin);
    nrf_delay_ms(50);
    nrf_gpio_pin_clear(rstPin);
    nrf_delay_ms(50);
    nrf_gpio_pin_set(rstPin);
    nrf_delay_ms(50);
  }

  if(cmdList) displayInit(cmdList);
}

void Arduino_ST7789::drawImageF(int16_t x, int16_t y, int16_t w, int16_t h, const uint16_t *img16)
{
  if(x>=_width || y>=_height || w<=0 || h<=0) return;
  setAddrWindow(x, y, x+w-1, y+h-1);

  SPI_START;
  DC_DATA;
  CS_ACTIVE;

  uint32_t num = (uint32_t)w*h;
  uint16_t num16 = num>>3;
  uint8_t *img = (uint8_t *)img16;
  while(num16--) {
    writeSPI(pgm_read_byte(img+1)); writeSPI(pgm_read_byte(img+0)); img+=2;
    writeSPI(pgm_read_byte(img+1)); writeSPI(pgm_read_byte(img+0)); img+=2;
    writeSPI(pgm_read_byte(img+1)); writeSPI(pgm_read_byte(img+0)); img+=2;
    writeSPI(pgm_read_byte(img+1)); writeSPI(pgm_read_byte(img+0)); img+=2;
    writeSPI(pgm_read_byte(img+1)); writeSPI(pgm_read_byte(img+0)); img+=2;
    writeSPI(pgm_read_byte(img+1)); writeSPI(pgm_read_byte(img+0)); img+=2;
    writeSPI(pgm_read_byte(img+1)); writeSPI(pgm_read_byte(img+0)); img+=2;
    writeSPI(pgm_read_byte(img+1)); writeSPI(pgm_read_byte(img+0)); img+=2;
  }
  uint8_t num8 = num & 0x7;
  while(num8--) { writeSPI(pgm_read_byte(img+1)); writeSPI(pgm_read_byte(img+0)); img+=2; }

  CS_IDLE;
  SPI_END;
}
